--- a/index.html
+++ b/index.html
@@ -290,50 +290,6 @@
         </div>
     </section>
 
-    <!-- Seção de Contato -->
-    <section id="contato" class="py-5">
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col text-center" data-aos="fade-up" data-aos-duration="800">
-                    <h2 class="section-title display-4 fw-bold">Entre em Contato</h2>
-                    <p class="section-subtitle lead">Estamos aqui para responder suas perguntas</p>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <div class="card border-0 shadow-lg">
-                        <div class="card-body p-5">
-                            <form id="contactForm">
-                                <div class="row">
-                                    <div class="col-md-6 mb-3">
-                                        <label for="name" class="form-label">Nome Completo</label>
-                                        <input type="text" class="form-control" id="name" required>
-                                    </div>
-                                    <div class="col-md-6 mb-3">
-                                        <label for="email" class="form-label">E-mail</label>
-                                        <input type="email" class="form-control" id="email" required>
-                                    </div>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="subject" class="form-label">Assunto</label>
-                                    <input type="text" class="form-control" id="subject" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="message" class="form-label">Mensagem</label>
-                                    <textarea class="form-control" id="message" rows="5" required></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-neon btn-neon-primary btn-lg w-100">Enviar
-                                    Mensagem</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            
-        </div>
-    </section>
 
     <!-- Modal de Detalhes do Produto -->
     <div class="modal fade" id="productModal" tabindex="-1" aria-hidden="true">
@@ -404,7 +360,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-4">
-                    <h5 class="text-uppercase mb-4">Contato</h5>
+                    <h5 class="text-uppercase mb-4" id="contato">Contato</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><i class="fas fa-phone me-2"></i> (71) 99407-3669</li>
                         <li class="mb-2"><i class="fas fa-envelope me-2"></i> promusic@gmail.com</li>
